testsuite/tests/explicit-dicts/should_compile/ImportDict.hs
module ImportDict where

import ExportDict

class1Instance :: Class1.Dict Int
class1Instance = Class1.Dict { method1 = id }
